API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

28-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Gregor Anzelj's Slovenian (sl.conf) locale.

27-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
	lex/dict drivers use new toupperstr_utf8 to allow
		keys to be encoded in utf8 (hopefully will
		allow cedict to be built/work correctly.
	Added toupperstr_utf8 to utilstr.cpp
	Make all operators have real name methods
	Isolated SWModule operators in define
	Fixed RawLD and RawLD4 drivers where there was
		a blank entry created at the beginning
	Added test lextest
	Consolidated setPosition for lexicons in SWLD

16-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	utf8transliterator now loads translators from local
		sword ICU data on demand
	SWMgr loads a UTF8Transliterator filter along with
		other filters on Load

11-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	simple fixes to allow compiling with gcc 3.1
	rename gettext to readtext as unobtrusively as
		possible.
	fix BGreek_Greek trans to work with icu2.1
	add SWMgr::isICU for apps to check if ICU stuff is
		available

10-Jul-2002	Daniel Glassey <dglassey@crosswire.org>
	Initial support for using sword transliterators
	with offical ICU

24-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added a few english abbrevs to better parse BW exported
		texts.
	Added Error() raised on improperly parsed VerseKey
		text.

22-Jun-2002	Daniel Glassey <dglassey@crosswire.org>
	Fixes to allow compiling with gcc3
	add configure support to libVCL and change X!/installmgr
		to build it automatically
	remove --enable-vcl from core sword

13-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed Module heading bug
	Fixed SWConfig += bug again
	Fixed SWModule size logic when getEntrySize returns -1

06-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed SWConfig += bug
	Added Efata's Indonesian locale

09-Jun-2002     Joachim Ansorg <jansorg@crosswire.org>